--- a/modules/argocd/application.yaml
+++ b/modules/argocd/application.yaml
@@ -1,4 +1,5 @@
 
+# Cluster Application manifest to bootstrap infrastructure at startup
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
