--- a/modules/argocd/application.yaml
+++ b/modules/argocd/application.yaml
@@ -1,25 +1,25 @@
-
 # Cluster Application manifest to bootstrap infrastructure at startup
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: bootstrap-application
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
-  project: default
-
+  project: default  
   source:
     repoURL: git@github.com:AmirKatorza/develeap-portfolio-poster-downloader-gitops.git
     targetRevision: HEAD
-    path: poster-downloader
+    path: "."
+  
   destination: 
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: argocd
 
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
-
     automated:
       selfHeal: true
       prune: true
