--- a/modules/argocd/argocd-values.yaml
+++ b/modules/argocd/argocd-values.yaml
@@ -10,11 +10,14 @@ configs:
     ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`    
     argocdServerAdminPassword: "$2a$10$5UUz.dQqW/xxCom7vWE33.M0TavnPho4Y3BI/6.CRRFagCDWD8oc6"
     
-
+# Server Config
 server:
   ingress:
     # -- Enable an ingress resource for the Argo CD server
     enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: "letsencrypt"
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Redirect HTTP to HTTPS (check if your ingress controller supports this annotation)
     # -- Defines which ingress controller will implement the resource
     ingressClassName: "nginx"
     # -- List of ingress hosts
@@ -27,4 +30,13 @@ server:
     paths:
       - /argocd
     # -- Ingress path type. One of `Exact`, `Prefix` or `ImplementationSpecific`
-    pathType: Prefix    
+    pathType: Prefix  
+    # -- Ingress TLS configuration
+    tls:
+      - hosts:
+          - poster-downloader.ddns.net
+        # Provide a name for the TLS secret that cert-manager will create or update
+        secretName: poster-downloader-ddns-net-tls
+    # Assuming you want to enforce HTTPS, it might not be necessary to explicitly enable HTTP
+    # If you want to allow HTTP access alongside HTTPS, specific ingress controller annotations are typically used to handle redirection or dual access configurations
+    https: true
