--- a/modules/argocd/argocd-values.yaml
+++ b/modules/argocd/argocd-values.yaml
@@ -15,8 +15,8 @@ server:
   ingress:
     # -- Enable an ingress resource for the Argo CD server
     enabled: true
-    annotations:
-      cert-manager.io/cluster-issuer: "letsencrypt"
+    # annotations:
+    #   cert-manager.io/cluster-issuer: "letsencrypt"
       # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Redirect HTTP to HTTPS (check if your ingress controller supports this annotation)
     # -- Defines which ingress controller will implement the resource
     ingressClassName: "nginx"
@@ -36,7 +36,7 @@ server:
       - hosts:
           - poster-downloader.ddns.net
         # Provide a name for the TLS secret that cert-manager will create or update
-        # secretName: source-tls
+        secretName: source-tls
     # Assuming you want to enforce HTTPS, it might not be necessary to explicitly enable HTTP
     # If you want to allow HTTP access alongside HTTPS, specific ingress controller annotations are typically used to handle redirection or dual access configurations
     https: true
